Migrated to ADT v17. Used manual handling of dependencies instead of automatic introduced in ADT 17 (libs moved to lib, all jars marked in Orders and export). Minor fixes (most of them because of ADT v17).